add properties popup

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>LOI</title>
+    <title>Covid 19 Location</title>
     <link rel="stylesheet" href="./style.css" />
     <link
       rel="stylesheet"
@@ -17,7 +17,7 @@
   </head>
   <body>
     <h2>My Map</h2>
-    <div id="mapid"></div>
+    <div id="map"></div>
   </body>
   <script
     src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
