--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   </head>
   <body>
     <h2>My Map</h2>
+    <div id="info"></div>
     <div id="map"></div>
   </body>
   <script
@@ -24,6 +25,5 @@
     integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
     crossorigin=""
   ></script>
-  <script src="./libs/leaflet.ajax.min.js"></script>
   <script src="script.js" type="text/javascript"></script>
 </html>
