--- a/index.html
+++ b/index.html
@@ -16,8 +16,12 @@
     />
   </head>
   <body>
-    <h2>My Map</h2>
     <div id="info"></div>
+    <div id="date-control">
+      <button id="prev"><</button>
+      <span id="selected-date"></span>
+      <button id="next">></button>
+    </div>
     <div id="map"></div>
   </body>
   <script
