--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Covid 19 Location</title>
+    <title>Covid-19 Locations of Interest New Zealand</title>
     <link rel="stylesheet" href="./style.css" />
     <link
       rel="stylesheet"
